syntax = "proto3";

package proto;

/*-
 * ‌
 * Hedera Network Services Protobuf
 * ​
 * Copyright (C) 2018 - 2021 Hedera Hashgraph, LLC
 * ​
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 * ‍
 */

option java_package = "com.hederahashgraph.api.proto.java";
// <<<pbj.java_package = "com.hedera.hapi.node.consensus">>> This comment is special code for setting PBJ Compiler java package
option java_multiple_files = true;

import "basic_types.proto";
import "custom_fees.proto";
import "duration.proto";

/**
 * See [ConsensusService.createTopic()](#proto.ConsensusService)
 */
message ConsensusCreateTopicTransactionBody {
    /**
     * Short publicly visible memo about the topic. No guarantee of uniqueness.
     */
    string memo = 1;

    /**
     * Access control for updateTopic/deleteTopic.
     * Anyone can increase the topic's expirationTime via ConsensusService.updateTopic(), regardless of the adminKey.
     * If no adminKey is specified, updateTopic may only be used to extend the topic's expirationTime, and deleteTopic
     * is disallowed.
     */
    Key adminKey = 2;

    /**
     * Access control for submitMessage.
     * If unspecified, no access control is performed on ConsensusService.submitMessage (all submissions are allowed).
     */
    Key submitKey = 3;

    /**
     * The initial lifetime of the topic and the amount of time to attempt to extend the topic's lifetime by
     * automatically at the topic's expirationTime, if the autoRenewAccount is configured (once autoRenew functionality
     * is supported by HAPI).
     * Limited to MIN_AUTORENEW_PERIOD and MAX_AUTORENEW_PERIOD value by server-side configuration.
     * Required.
     */
    Duration autoRenewPeriod = 6;

    /**
     * Optional account to be used at the topic's expirationTime to extend the life of the topic (once autoRenew
     * functionality is supported by HAPI).
     * The topic lifetime will be extended up to a maximum of the autoRenewPeriod or however long the topic
     * can be extended using all funds on the account (whichever is the smaller duration/amount and if any extension
     * is possible with the account's funds).
     * If specified, there must be an adminKey and the autoRenewAccount must sign this transaction.
     */
    AccountID autoRenewAccount = 7;

    /**
     * Access control for update or delete of custom fees.
     * <p>
     * If set, subsequent `consensus_update_topic` transactions signed with this
     *  key MAY update or delete the custom fees for this topic.<br/>
     * If not set, the custom fees for this topic are immutable.<br/>
     * If not set when the topic is created, this field CANNOT be set via
     *  update.<br/>
     * If set when the topic is created, this field MAY be changed via update.
     */
    Key fee_schedule_key = 8;

    /**
     * A set of keys.<br/>
     * Keys in this list are permitted to submit messages to this topic without
     * paying custom fees associated with this topic.
     * <p>
     * If a submit transaction is signed by _any_ key included in this set,
     * custom fees SHALL NOT be charged for that transaction.<br/>
     * This field MUST NOT contain more than
     *  `MAX_ENTRIES_FOR_FEE_EXEMPT_KEY_LIST` keys.<br/>
     * fee_exempt_key_list SHALL NOT contain any duplicate keys.<br/>
     * fee_exempt_key_list MAY contain keys for accounts that are inactive,
     *  deleted, or non-existent.<br/>
     * If fee_exempt_key_list is unset in this transaction, there SHALL NOT be
     *  any fee-exempt keys.  In particular, the following keys SHALL NOT be
     *  implicitly or automatically added to this list:
     *  `adminKey`, `submitKey`, `fee_schedule_key`.
     */
    repeated Key fee_exempt_key_list = 9;

    /**
     * A set of custom fee definitions.<br/>
     * These are fees to be assessed for each submit to this topic.
     * <p>
     * Each fee defined in this set SHALL be evaluated for
     * each message submitted to this topic, and the resultant
     * total assessed fees SHALL be charged.<br/>
     * Custom fees defined here SHALL be assessed in addition to the base
     * network and node fees.<br/>
     * custom_fees list SHALL NOT contain more than
     *  `MAX_CUSTOM_FEE_ENTRIES_FOR_TOPICS` entries.
     */
    repeated ConsensusCustomFee custom_fees = 10;
}
